Add current branch to those triggered by ghactions

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, ghactions-python-package ]
   pull_request_target:
     branches: [ master ]
 
