--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,4 +37,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude test/googletest-1.8.1
     - name: Test with pytest
       run: |
-        pytest
+        pytest --ignore=test/googletest-1.8.1
