Ignore new filpath for googletest

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude test/googletest-1.8.1
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude test/googletest-1.8.1
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude cpp_tests/googletest-1.8.1
     - name: Test with pytest
       run: |
-        pytest --ignore=test/googletest-1.8.1
+        pytest --ignore=cpp_tests/googletest-1.8.1
